--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title> "Sun praising", great thing? or greatest thing? </title>
   </head>
 <body>
+  <img> https://avatars1.githubusercontent.com/u/42974142?v=4
   <h1>
 Hello there, aweso
 Hello there, awesome person!
