--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 <body>
 <img src="https://avatars1.githubusercontent.com/u/42974142?v=4`">`
   <h1>
-Hello there, aweso
-Hello there, awesome person!
+"Hello there" -Ewan McGregor
     </h1>
+  <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
 </body>
 </html>
