--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 "Hello there" -Ewan McGregor
     </h1>
   <ol>
-    <li>This</li>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
