--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">.
     <title> "Sun praising", great thing? or greatest thing? </title>
   </head>
 <body>
